Followed lecture no. 2

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,1 +1,20 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Webpage</title>
+</head>
+
+<body>
+    <h1>Hey, welcome to my first webpage</h1>
+    <h2>This is my second heading</h2>
+    <h3>This is my third heading</h3>
+    <p>This is my paragraph. There are many like it, but this one is mine. My paragraph is
+        <br>my best friend. It is my life. I must master it as I must master my life
+    </p>
+</body>
+
+</html>
