--- a/Task 8-CSS_Bootstrap Navbar/Navbar.html
+++ b/Task 8-CSS_Bootstrap Navbar/Navbar.html
@@ -28,7 +28,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse-navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -48,6 +48,32 @@
     </nav>
 
     <h1 id="Title">Welcome</h1>
+
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="Hunter x Hunter e115.jpg" class="d-block w-100" alt="Gon">
+            </div>
+            <div class="carousel-item">
+                <img src="Hunter x Hunter e90.jpg" class="d-block w-100" alt="Killua">
+            </div>
+            <div class="carousel-item">
+                <img src="Hunter x Hunter e16.jpg" class="d-block w-100" alt="Hisoka">
+            </div>
+            <div class="carousel-item">
+                <img src="Hunter x Hunter e125.jpg" class="d-block w-100" alt="Netero">
+            </div>
+
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
