--- a/Task 8-CSS_Bootstrap Navbar/Navbar.html
+++ b/Task 8-CSS_Bootstrap Navbar/Navbar.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="NavbarStyling.css">
+
+    <!-- Font Links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;400;700;900&display=swap"
@@ -21,9 +23,10 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-md bg-dark text-light sticky-top flex-wrap flex-md-nowrap">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">christian bugeja</a>
+            <a class="navbar-brand text-uppercase text-light" href="#">christian bugeja</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,16 +34,18 @@
             <div class="collapse-navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Work</a>
+                        <a class="nav-link text-light" href="https://www.instagram.com/christian_bugeja/?hl=en">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link text-light"
+                            href="https://www.instagram.com/christian_bugeja/?hl=en">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                        <a class="nav-link text-light"
+                            href="https://www.instagram.com/christian_bugeja/?hl=en">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -48,7 +53,7 @@
     </nav>
 
     <h1 id="Title">Welcome</h1>
-
+    <!--Hunter x Hunter Carousel-->
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -75,6 +80,57 @@
         </button>
     </div>
 
+    <!--Image Gallery-->
+    <h1 id="Gallery">Gallery</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="1-Gon.jpg" width="400" class="gallery" alt="gon">
+            </div>
+            <div class="col">
+                <img src="2-Killua.jpg" width="400" class="gallery" alt="killua">
+            </div>
+            <div class="col">
+                <img src="3-Kurapika.jpg" width="400" class="gallery" alt="kurapika">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <img src="4-Leorio.png" width="400" class="gallery" alt="leorio">
+            </div>
+            <div class="col">
+                <img src="5-bisky.jpg" width="400" class="gallery" alt="bisky">
+            </div>
+            <div class="col">
+                <img src="6-Netero.png" width="400" height="400" class="gallery" alt="netero">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <img src="7-Hisoka.jpg" width="400" class="gallery" alt="hisoka">
+            </div>
+            <div class="col">
+                <img src="8-Chrollo.png" width="400" height="400" class="gallery" alt="chrollo">
+            </div>
+            <div class="col">
+                <img src="9-Feitan.jpg" width="400" class="gallery" alt="feitan">
+            </div>
+        </div>
+    </div>
+
+    <!--Bottom Nav-->
+
+    <div class="bottomnav">
+        <p id="links" class="fs-2">links</p>
+        <a href="https://www.instagram.com/christian_bugeja/?hl=en" target="_blank"><img src="Artboard 1 copy.png"
+                width="35" height="35" alt="instagram"></a>
+        <a href="https://www.instagram.com/christian_bugeja/?hl=en" target="_blank"><img src="Artboard 1.png" width="35"
+                height="35" alt="facebook"></a>
+        <a href="https://www.instagram.com/christian_bugeja/?hl=en" target="_blank"><img src="Artboard 1 copy 2.png"
+                width="35" height="35" alt="linkedin"></a>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
