fixed some issues with nav bar and gallery

--- a/Task 8-CSS_Bootstrap Navbar/Navbar.html
+++ b/Task 8-CSS_Bootstrap Navbar/Navbar.html
@@ -24,7 +24,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Christian Bugeja</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,8 +49,8 @@
     </nav>
 
 
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-md bg-dark">
+    <!--Old Navbar-->
+    <!-- <nav class="navbar navbar-expand-md bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand text-uppercase text-light" href="#">christian bugeja</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -76,7 +76,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <h1 id="Title">Welcome</h1>
     <!--Hunter x Hunter Carousel-->
@@ -109,41 +109,30 @@
     <!--Image Gallery-->
     <h1 id="Gallery">Gallery</h1>
     <div class="container">
-        <div class="row">
+        <div class="row flex-column flex-sm-row justify-content-center align-items-center">
             <div class="col">
-                <img src="1-Gon.jpg" width="400" class="gallery" alt="gon">
+                <img src="1-Gon.jpg" width="300px" class="gallery" alt="gon">
             </div>
             <div class="col">
-                <img src="2-Killua.jpg" width="400" class="gallery" alt="killua">
+                <img src="2-Killua.jpg" width="300px" class="gallery" alt="killua">
             </div>
             <div class="col">
-                <img src="3-Kurapika.jpg" width="400" class="gallery" alt="kurapika">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col">
-                <img src="4-Leorio.png" width="400" class="gallery" alt="leorio">
-            </div>
-            <div class="col">
-                <img src="5-bisky.jpg" width="400" class="gallery" alt="bisky">
-            </div>
-            <div class="col">
-                <img src="6-Netero.png" width="400" height="400" class="gallery" alt="netero">
+                <img src="3-Kurapika.jpg" width="300px" class="gallery" alt="kurapika">
             </div>
         </div>
 
-        <div class="row">
+        <div class="row flex-column flex-sm-row justify-content-center align-items-center">
             <div class="col">
-                <img src="7-Hisoka.jpg" width="400" class="gallery" alt="hisoka">
+                <img src="4-Leorio.png" width="300px" class="gallery" alt="leorio">
             </div>
             <div class="col">
-                <img src="8-Chrollo.png" width="400" height="400" class="gallery" alt="chrollo">
+                <img src="5-bisky.jpg" width="300px" class="gallery" alt="bisky">
             </div>
             <div class="col">
-                <img src="9-Feitan.jpg" width="400" class="gallery" alt="feitan">
+                <img src="7-Hisoka.jpg" width="300px" class="gallery" alt="hisoka">
             </div>
         </div>
+
     </div>
 
     <!--Bottom Nav-->
