--- a/Final_Assignment/home.html
+++ b/Final_Assignment/home.html
@@ -14,7 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;400;700&display=swap" rel="stylesheet">
+    <!--CSS-->
     <link rel="stylesheet" href="home_styles.css">
+    <!--fontawesome-->
+    <script src="https://kit.fontawesome.com/bd53d7c762.js" crossorigin="anonymous"></script>
+
     <title>Exhibition</title>
 </head>
 
@@ -23,13 +27,18 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold text-uppercase" href="#">
-                <img src="MockLogo.png" alt="" width="45" height="45">
+                <img src="Images/MockLogo.png" alt="" width="45" height="45">
                 Exhibition
             </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex flex-column flex-sm-row justify-content-end align-items-start"
-                id="navbarNav">
-                <ul class="navbar-nav">
+
+            <!-- d-flex flex-column flex-sm-row align-items-start -->
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav align-items-end">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -44,24 +53,203 @@
                     </li>
                 </ul>
             </div>
+
+
         </div>
     </nav>
-    <div class="WelcomeNote">
-        <h1 class="d-flex justify-content-center text-uppercase">Welcome!</h1>
-        <p class="d-flex justify-content-center">Welcome to the UM BFA (Honours) Digital Arts Online
-            Exhibition 2022</p>
-        <p class="d-flex justify-content-center">Every artist has personally designed and curated a
-            variety of elements
-            that come together in an intricate
-            and meticulously planned art project, that is backed by thorough research in the respective field. No
-            two projects are the same, as each revolves around a subject that the artist is personally passionate in
-            pursuing, expressed through their preferred medium/media of choice.</p>
+
+    <!--Navbar-->
+
+    <!--Welcome Note-->
+
+    <div class="offset-md-2 col-md-8">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 order-1 order-md-1 d-flex justify-content-center align-items-center">
+                    <h1 class="text-uppercase p-3 border bg-light">Welcome!</h1>
+                </div>
+                <div class="col-md-2 order-2 order-md-2"></div>
+                <div
+                    class="col-md-10 order-3 order-md-3 d-flex justify-content-center align-items-center p-3 border bg-light">
+                    <p>to the UM BFA (Honours) Digital
+                        Arts Online
+                        Exhibition 2022
+                        <br><br>
+                        This online exhibition was launched in conjunction with the physical exhibition being held at
+                        the Department of Media and Knowledge Sciences (MaKS). The exhibition is a culmination of works
+                        created by the digital art students for their Final Year Project and no two projects are the
+                        same. Each project is something that the artist is very passionate about and as such has put a
+                        lot of research, time and effort in. All done in order to deliver something that is as beautiful
+                        as it is
+                        brilliant.
+                    </p>
+                </div>
+            </div>
+        </div>
 
     </div>
+
+    <!--Welcome Note-->
+
+
     <!-- HR Styling from https://codepen.io/ibrahimjabbari/pen/ozinB -->
+
     <div class="HorizontalLine">
         <hr>
     </div>
+    <h1 class="text-center p-3 text-uppercase">Meet the Artists</h1>
+    <!-- Carosel -->
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="Images/Carosel 1.1.jpg" class="d-block w-100" alt="Car1">
+                <div class="carousel-caption d-none d-md-block">
+                    <a href="#">
+                        <h2>Jeremy Saliba</h2>
+                    </a>
+                    <h5 class="text-uppercase">Graphic Desinger</h5>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/Carosel 2.1.jpg" class="d-block w-100" alt="Car2">
+                <div class="carousel-caption d-none d-md-block">
+                    <a href="#">
+                        <h2>Lara Borg</h2>
+                    </a>
+                    <h5 class="text-uppercase">Illustrator</h5>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/Carosel 3.1.jpg" class="d-block w-100" alt="Car3">
+                <div class="carousel-caption d-none d-md-block">
+                    <a href="#">
+                        <h2>Sven Zammit</h2>
+                    </a>
+                    <h5 class="text-uppercase">Animator</h5>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/Carosel 4.1.jpg" class="d-block w-100" alt="Car4">
+                <div class="carousel-caption d-none d-md-block">
+                    <a href="#">
+                        <h2>Gale West</h2>
+                    </a>
+                    <h5 class="text-uppercase">Graphic Desinger</h5>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/Carosel 5.1.jpg" class="d-block w-100" alt="Car5">
+                <div class="carousel-caption d-none d-md-block">
+                    <a href="#">
+                        <h2>Elenia Attard</h2>
+                    </a>
+                    <h5 class="text-uppercase">UX/UI Designer</h5>
+                </div>
+            </div>
+
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <!-- Carosel -->
+
+    <h1 class="text-center pt-3 text-uppercase">Gallery</h1>
+
+    <!-- Gallery -->
+    <div class="container">
+        <div class="row pt-3 flex-column flex-sm-row justify-content-center align-items-center">
+            <div class="col col-md-4 col-sm-1">
+                <img src="Images/Proj1c.jpg" width="300px" class="gallery img-fluid" alt="Proj1">
+                <div class="artist_name h6">
+                    <p>Attard Jason</p>
+                </div>
+                <div class="piece_name h5">
+                    <p>Building a Brand</p>
+                </div>
+            </div>
+            <div class="col col-md-4 col-sm-1">
+                <img src="Images/Proj2c.jpg" width="300px" class="gallery img-fluid" alt="Proj2">
+                <div class="artist_name h6">
+                    <p>Buttigieg Abby</p>
+                </div>
+                <div class="piece_name h5">
+                    <p>Saint Andrew's Packaging</p>
+                </div>
+            </div>
+            <div class="col col-md-4 col-sm-1">
+                <img src="Images/Proj3c.jpg" width="300px" class="gallery img-fluid" alt="Proj3">
+                <div class="artist_name h6">
+                    <p>Cassar Mario</p>
+                </div>
+                <div class="piece_name h5">
+                    <p>Convolution Photo Series</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row pt-3 flex-column flex-sm-row justify-content-center align-items-center">
+            <div class="col col-md-4 col-sm-1">
+                <img src="Images/Proj4c.jpg" width="300px" class="gallery img-fluid" alt="Proj4">
+                <div class="artist_name h6">
+                    <p>Darmanin Darell</p>
+                </div>
+                <div class="piece_name h5">
+                    <p>Feudal Abstraction </p>
+                </div>
+            </div>
+            <div class="col col-md-4 col-sm-1">
+                <img src="Images/Proj5c.jpg" width="300px" class="gallery img-fluid" alt="Proj5">
+                <div class="artist_name h6">
+                    <p>Fenech Harry</p>
+                </div>
+                <div class="piece_name h5">
+                    <p>A Fishing Expedition</p>
+                </div>
+            </div>
+            <div class="col col-md-4 col-sm-1">
+                <img src="Images/Proj6c.jpg" width="300px" class="gallery img-fluid" alt="Proj6">
+                <div class="artist_name h6">
+                    <p>Lia Tobey</p>
+                </div>
+                <div class="piece_name h5">
+                    <p>Minimalistic Poster Redesign</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- Gallery -->
+
+    <!-- Bottom Nav-->
+
+    <div class="bottomnav">
+        <div class="container">
+            <div class="row d-flex">
+                <div class="col d-flex justify-content-center">
+                    <a href="" target="_blank">
+                        <i class="fab fa-facebook-f p-3 text-secondary"></i>
+                    </a>
+
+                    <a href="" target="_blank">
+                        <i class="fab fa-instagram p-3 text-secondary"></i>
+                    </a>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- Bottom Nav-->
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
